--- a/package.json
+++ b/package.json
@@ -5,19 +5,31 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "prod": "npm run production"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.0.4",
     "core-js": "^3.3.2",
-    "vue": "^2.6.10"
+    "element-ui": "^2.12.0",
+    "popper.js": "^1.16.0",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
+    "axios": "^0.18.1",
     "babel-eslint": "^10.0.3",
+    "bootstrap": "^4.3.1",
+    "cross-env": "^5.2.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
