--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.3.2",
     "element-ui": "^2.12.0",
     "popper.js": "^1.16.0",
+    "vee-validate": "2.2.15",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
